--- a/projekte/test/Home_Sweet_Home/style.css
+++ b/projekte/test/Home_Sweet_Home/style.css
@@ -25,11 +25,9 @@ h1 {
 }
 
 h2 {
+    font-weight: 700;
+    color: #cc8f1a;
     font-size: 14pt;
-    font-style: italic;
-    font-family: sans-serif;
-    font-weight: lighter;
-    color: #BBB;
 }
 
 .header {
